tests/contract_testcases/substrate/libraries/restrictions.sol

        library c {
            constructor() {}
        }
// ---- Expect: diagnostics ----
// error: 3:13-27: constructor not allowed in a library
